--- a/site.yml
+++ b/site.yml
@@ -5,7 +5,7 @@ site:
 content:
   sources:
     - url: https://github.com/openshift/pipelines-docs.git
-      branches: op-0.5-master, op-0.7-master
+      branches: op-0.5-master, op-0.7-master, op-0.8-master
 ui:
   bundle:
     url: https://github.com/openshift/pipelines-docs/blob/master/ui-bundle.zip?raw=true
